tests/snapshots/errors__errors@component_missing_binding.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: Binding is not defined
  --> examples/component_missing_binding.rs:42:8
   |
42 |     fn brewer(&self) -> CoffeeMaker<H, P>;
   |        ^^^^^^

error[E0277]: unable to create a builder from `DirkCoffeeShop` due to errors in the injection mechanism
  --> examples/component_missing_binding.rs:20:24
   |
20 |     let coffee_shop = <DirkCoffeeShop as dirk::DirkComponent<_>>::builder().build();
   |                        ^^^^^^^^^^^^^^ injection error
   |
   = help: the trait `DirkComponent<_>` is not implemented for `DirkCoffeeShop`
   = note: there might be an error in the `#[component(...)]` macro on the trait corresponding to `DirkCoffeeShop`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `errors` (example "component_missing_binding") due to 2 previous errors
