tests/snapshots/errors__errors@component_missing_dependency.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: Binding is not defined
  --> examples/component_missing_dependency.rs:34:96
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                ^^^^^^

error: Binding is not defined
  --> examples/component_missing_dependency.rs:34:104
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                        ^^^^

error[E0425]: cannot find value `heater_provider` in this scope
  --> examples/component_missing_dependency.rs:34:96
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                ^^^^^^ help: a local variable with a similar name exists: `logger_provider`

error[E0425]: cannot find value `pump_provider` in this scope
  --> examples/component_missing_dependency.rs:34:104
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                        ^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `errors` (example "component_missing_dependency") due to 4 previous errors
