tests/snapshots/errors__errors@missing_binding@stderr.snap
---
source: tests/errors.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
error: Binding is not defined
  --> examples/missing_binding.rs:42:8
   |
42 |     fn brewer(&self) -> CoffeeMaker<H, P>;
   |        ^^^^^^

error[E0433]: failed to resolve: use of undeclared type `StilettoCoffeeShop`
  --> examples/missing_binding.rs:20:23
   |
20 |     let coffee_shop = StilettoCoffeeShop::builder().build();
   |                       ^^^^^^^^^^^^^^^^^^ use of undeclared type `StilettoCoffeeShop`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `errors` (example "missing_binding") due to 2 previous errors
