tests/snapshots/errors__errors@missing_dependency@stderr.snap
---
source: tests/errors.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
error: Binding is not defined
  --> examples/missing_dependency.rs:34:96
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                ^^^^^^

error: Binding is not defined
  --> examples/missing_dependency.rs:34:104
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                        ^^^^

error[E0425]: cannot find value `heater_provider` in this scope
  --> examples/missing_dependency.rs:34:96
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                ^^^^^^ help: a local variable with a similar name exists: `logger_provider`

error[E0425]: cannot find value `pump_provider` in this scope
  --> examples/missing_dependency.rs:34:104
   |
34 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                                                                                                        ^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `errors` (example "missing_dependency") due to 4 previous errors
